correct text-align in columns 2 and 3

--- a/src/app/components/Footer/styles.css
+++ b/src/app/components/Footer/styles.css
@@ -49,10 +49,12 @@ footer {
 
 #column2 h3{
   align-self: center;
+  text-align: center;
 }
 
 #column3{
   align-items: flex-end;
+  text-align: right;
 }
 
 @media (max-width: 500px) {
